<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/logo2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="712dp"
        android:layout_marginTop="104dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/sym_def_app_icon" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textHeaderAddItemToList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/addItemPageHeader"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="60sp" />
    </LinearLayout>

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="348dp"
        android:layout_height="66dp"
        android:text="@string/checkBoxOneStr"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textView8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editItemQuantity" />

    <EditText
        android:id="@+id/editItemQuantity"
        android:layout_width="431dp"
        android:layout_height="67dp"
        android:ems="10"
        android:hint="@string/itemQuantityStr"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/checkBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName8"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <EditText
        android:id="@+id/editTextTextPersonName8"
        android:layout_width="430dp"
        android:layout_height="73dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/addItemName"
        app:layout_constraintBottom_toTopOf="@+id/editItemQuantity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintVertical_chainStyle="spread"
        tools:ignore="DuplicateSpeakableTextCheck"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/button"
        android:layout_width="178dp"
        android:layout_height="78dp"
        android:layout_marginTop="364dp"
        android:text="@string/buttonItemAddStr"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="798dp"
        android:layout_height="wrap_content"
        android:text="@string/itemQuantityCheck"
        android:textAlignment="center"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/textView10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="798dp"
        android:layout_height="wrap_content"
        android:text="@string/itemNameCheck"
        android:textAlignment="center"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/textView9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="798dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="108dp"
        android:text="@string/addressCheck"
        android:textAlignment="center"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/warningCheckText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="51dp"
        android:layout_marginBottom="50dp"
        android:text="@string/checkStr"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/checkBox"
        tools:layout_editor_absoluteX="371dp" />

</androidx.constraintlayout.widget.ConstraintLayout>